[gd_scene load_steps=15 format=3 uid="uid://dbhqm8esk484k"]

[ext_resource type="Script" path="res://scripts/ingame_gui.gd" id="1_0pxoo"]
[ext_resource type="Texture2D" uid="uid://bv8lf3quuetxu" path="res://assets/temp/one-square.svg" id="1_ovo7d"]
[ext_resource type="Texture2D" uid="uid://gs7x7asfvdwh" path="res://assets/temp/two-square.svg" id="2_bf6ql"]
[ext_resource type="Texture2D" uid="uid://yk6l4g0hcpxm" path="res://assets/temp/one-square-fill.svg" id="2_ks1em"]
[ext_resource type="Texture2D" uid="uid://1blbnpnikevv" path="res://assets/temp/three-square.svg" id="3_7mrhs"]
[ext_resource type="Texture2D" uid="uid://8fl5ldq6cqwa" path="res://assets/temp/two-square-fill.svg" id="4_bf2fy"]
[ext_resource type="Texture2D" uid="uid://bsonxwsh6ixot" path="res://assets/temp/three-square-fill.svg" id="6_0x7iq"]

[sub_resource type="SystemFont" id="SystemFont_17ypl"]
subpixel_positioning = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1gtsf"]
bg_color = Color(0.0941176, 0.133333, 0.14902, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 95.0
expand_margin_top = 10.0
expand_margin_right = 95.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xju50"]
bg_color = Color(0.0666667, 0.0980392, 0.109804, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 95.0
expand_margin_top = 10.0
expand_margin_right = 95.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f3tw0"]
bg_color = Color(0.0941176, 0.133333, 0.14902, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 50.0
expand_margin_top = 10.0
expand_margin_right = 50.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v2sy1"]
bg_color = Color(0.0666667, 0.0980392, 0.109804, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 50.0
expand_margin_top = 10.0
expand_margin_right = 50.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rwo02"]
bg_color = Color(0.0941176, 0.133333, 0.14902, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 32.0
expand_margin_top = 10.0
expand_margin_right = 32.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ef1wh"]
bg_color = Color(0.0666667, 0.0980392, 0.109804, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 32.0
expand_margin_top = 10.0
expand_margin_right = 32.0
expand_margin_bottom = 10.0

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0pxoo")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 64.0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="ColorRect" type="ColorRect" parent="CenterContainer/MarginContainer"]
layout_mode = 2
color = Color(0.188235, 0.25098, 0.27451, 1)

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="CharacterSelection" type="VBoxContainer" parent="CenterContainer/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="CharOne" type="TextureRect" parent="CenterContainer/MarginContainer/MarginContainer/CharacterSelection"]
unique_name_in_owner = true
visible = false
clip_contents = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("1_ovo7d")
expand_mode = 1

[node name="CharOneActive" type="TextureRect" parent="CenterContainer/MarginContainer/MarginContainer/CharacterSelection"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("2_ks1em")
expand_mode = 1

[node name="CharTwo" type="TextureRect" parent="CenterContainer/MarginContainer/MarginContainer/CharacterSelection"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("2_bf6ql")
expand_mode = 1

[node name="CharTwoActive" type="TextureRect" parent="CenterContainer/MarginContainer/MarginContainer/CharacterSelection"]
unique_name_in_owner = true
visible = false
clip_contents = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("4_bf2fy")
expand_mode = 1

[node name="CharThree" type="TextureRect" parent="CenterContainer/MarginContainer/MarginContainer/CharacterSelection"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("3_7mrhs")
expand_mode = 1

[node name="CharThreeActive" type="TextureRect" parent="CenterContainer/MarginContainer/MarginContainer/CharacterSelection"]
unique_name_in_owner = true
visible = false
clip_contents = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("6_0x7iq")
expand_mode = 1

[node name="Pause" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0941176, 0.133333, 0.14902, 1)

[node name="MarginContainer" type="CenterContainer" parent="Pause"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_right = 125.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Pause/MarginContainer"]
clip_contents = true
custom_minimum_size = Vector2(450, 400)
layout_mode = 2
color = Color(0.188235, 0.25098, 0.27451, 1)

[node name="MarginContainer" type="MarginContainer" parent="Pause/MarginContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Pause/MarginContainer/ColorRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="RichTextLabel" type="RichTextLabel" parent="Pause/MarginContainer/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = SubResource("SystemFont_17ypl")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]PAUSED[/center]"
fit_content = true
scroll_active = false

[node name="ResumeButton" type="Button" parent="Pause/MarginContainer/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_1gtsf")
theme_override_styles/hover = SubResource("StyleBoxFlat_xju50")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xju50")
theme_override_styles/focus = SubResource("StyleBoxFlat_1gtsf")
text = "RESUME"

[node name="MenuButton" type="Button" parent="Pause/MarginContainer/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_f3tw0")
theme_override_styles/hover = SubResource("StyleBoxFlat_v2sy1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_v2sy1")
theme_override_styles/focus = SubResource("StyleBoxFlat_f3tw0")
text = "BACK TO MENU"

[node name="DesktopButton" type="Button" parent="Pause/MarginContainer/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_rwo02")
theme_override_styles/hover = SubResource("StyleBoxFlat_ef1wh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ef1wh")
theme_override_styles/focus = SubResource("StyleBoxFlat_rwo02")
text = "BACK TO DESKTOP"

[node name="End" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0941176, 0.133333, 0.14902, 1)

[node name="MarginContainer" type="CenterContainer" parent="End"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_right = 125.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="End/MarginContainer"]
clip_contents = true
custom_minimum_size = Vector2(450, 400)
layout_mode = 2
color = Color(0.188235, 0.25098, 0.27451, 1)

[node name="MarginContainer" type="MarginContainer" parent="End/MarginContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="End/MarginContainer/ColorRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="RichTextLabel" type="RichTextLabel" parent="End/MarginContainer/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = SubResource("SystemFont_17ypl")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]THE END[/center]"
fit_content = true
scroll_active = false

[node name="RichTextLabel2" type="RichTextLabel" parent="End/MarginContainer/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = SubResource("SystemFont_17ypl")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Unfortunately we had no time for more content, we hope you enjoyed it anyway."
fit_content = true
scroll_active = false

[node name="MenuButton" type="Button" parent="End/MarginContainer/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_f3tw0")
theme_override_styles/hover = SubResource("StyleBoxFlat_v2sy1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_v2sy1")
theme_override_styles/focus = SubResource("StyleBoxFlat_f3tw0")
text = "BACK TO MENU"

[node name="DesktopButton" type="Button" parent="End/MarginContainer/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_rwo02")
theme_override_styles/hover = SubResource("StyleBoxFlat_ef1wh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ef1wh")
theme_override_styles/focus = SubResource("StyleBoxFlat_rwo02")
text = "BACK TO DESKTOP"

[connection signal="pressed" from="Pause/MarginContainer/ColorRect/MarginContainer/VBoxContainer/ResumeButton" to="." method="pause"]
[connection signal="pressed" from="Pause/MarginContainer/ColorRect/MarginContainer/VBoxContainer/MenuButton" to="." method="back_to_menu"]
[connection signal="pressed" from="Pause/MarginContainer/ColorRect/MarginContainer/VBoxContainer/DesktopButton" to="." method="exit_game"]
[connection signal="pressed" from="End/MarginContainer/ColorRect/MarginContainer/VBoxContainer/MenuButton" to="." method="back_to_menu"]
[connection signal="pressed" from="End/MarginContainer/ColorRect/MarginContainer/VBoxContainer/DesktopButton" to="." method="exit_game"]
